--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(image/nighthigh.jpg);
+	background-image: url(nighthigh.jpg);
 	background-size: cover;
 	font-family: Arial;
 }
