--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(https://www.wallpapertip.com/wmimgs/1-12677_highway-night-traffic-4k-5k-wallpapers-highway-night.jpg);
+	background-image: url(https://wallpapercave.com/wp/wp4787752.jpg);
 	background-size: cover;
 	font-family: Arial;
 }
